<resources>
    <string name="app_name">TCA</string>
    <string name="company_name">TeachersClubApp</string>
    <string name="Image">logo</string>
    <string name="login_signup">Login/Signup</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="alternate_login">Alternate Login</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="message_1">Continue without signing in</string>
    <string name="dashboard1">Add Job</string>
    <string name="description_2">add_job</string>
    <string name="home">home</string>
    <string name="notification">notification</string>
    <string name="profile">profile</string>
    <string name="back_key">back key</string>
    <string name="job1">Create Job</string>
    <string name="add_job_1">Company Name</string>
    <string name="add_job_2">Job Role</string>
    <string name="add_job_3">Total Openings</string>
    <string name="add_job_4">Job Type</string>
    <string name="add_job_5">Location</string>
    <string name="add_job_6">City</string>
    <string name="add_job_7">State</string>
    <string name="add_job_8">Address</string>
    <string name="add_job_9">Help/Support Email</string>
    <string name="add_job_10">Additional Info</string>
    <string name="add_job_11">Job Description</string>
    <string name="add_job_12">Enter Company Name</string>
    <string name="add_job_13">Enter Job Role Or Title</string>
    <string name="add_job_14">Enter complete mailing address</string>
    <string name="add_job_15">Enter email</string>
    <string name="add_job_16">Enter job description</string>
    <string name="add_job_17">Write some additional info</string>
    <string name="card1_db_1">Company Name</string>
    <string name="card1_db_2">Posted on date</string>
    <string name="card1_db_3">Job Title</string>
    <string name="card1_db_5">Location</string>
    <string name="card1_db_6">10</string>
    <string name="card1_db_4">View</string>
    <string name="card1_db_7">Type</string>
    <string name="message_sign_in">You are not logged in. Please Sign in by clicking on the button below</string>
    <string name="button_sign_in">Sign In</string>
    <string name="notify_1">Notification</string>
    <string name="notify_time_message">Send on xx:xx at xx:xx:xx</string>
    <string name="notify_message">message</string>
    <string name="profile_1">Add Document</string>
    <string name="profile_bio">Some details about your self</string>
    <string name="profile_m2">settings</string>
    <string name="documents">Documents</string>
    <string name="job_posted">Job Posted</string>
    <string name="job_applied">Job Applied</string>
    <string name="settings_info">View and manage your account for this TCA app this also include settings including privacy, posts, documents and managing accounts</string>
    <string name="document_1">Add Documents</string>
    <string name="document_2">Enter description about your document</string>
    <string name="document_3">Upload</string>
    <string name="document_4">No file selected</string>
    <string name="card_doc_1">Download</string>
    <string name="card_doc_2">Document info comes here</string>
    <string name="card_doc_3">Uploaded on xx:xx:xxxx</string>
    <string name="delete">delete</string>
    <string name="card5_1">posted on xx:xx:xxxx</string>
    <string name="card5_2">Job Title</string>
    <string name="card5_3">Status:open/close</string>
    <string name="card5_4">close</string>
    <string name="card4_2">Status:Not Known</string>
    <string name="card4_1">Applied on xx:xx:xxxx</string>
    <string name="card4_3">message</string>
    <string name="ui9_1">About Job</string>
    <string name="ui10_1">Job Applicants</string>
    <string name="ui11_message">Message</string>
    <string name="card6_2">View Profile</string>
    <string name="card6_3">Turn on chat window</string>
    <string name="card6_4">Accept</string>
    <string name="card6_5">Reject</string>
    <string name="card6_6">Reset</string>
    <string name="card7_2">sent on xx:xx:xxxx</string>
    <string name="card7_4">message</string>
    <string name="ui0_1">Signing in</string>
    <string name="ui12_1">Update</string>
    <string name="ui12_2">Message</string>
    <string name="ui12_3">update</string>
    <string name="ui1_1">Forgot Password</string>
</resources>