<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Backend1_Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/Image"
        android:src="@drawable/icon_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textColor="@color/heading"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:text="@string/login_signup"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView">

    </TextView>

    <EditText
        android:id="@+id/ui1_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/icon_person"
        android:drawablePadding="4dp"
        android:textColor="@color/black"
        android:background="@drawable/shape_email_pass_shaper"
        android:padding="10dp"
        android:textColorHint="@color/hint"
        android:autofillHints=""
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/ui1_login_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </EditText>

    <EditText
        android:id="@+id/ui1_password"
        android:layout_width="0dp"
        android:background="@drawable/shape_email_pass_shaper"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:drawableStart="@drawable/icon_lock"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:drawablePadding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/ui1_email"
        app:layout_constraintStart_toStartOf="@+id/ui1_email"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ui1_email"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/ui1_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/google"
        android:src="@drawable/icon_google"
        app:layout_constraintBottom_toTopOf="@+id/ui1_skip"
        app:layout_constraintStart_toStartOf="@+id/ui1_login_signup"
        app:layout_constraintTop_toBottomOf="@+id/ui1_login_signup">

    </ImageView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/facebook"
        android:src="@drawable/icon_facebook"
        app:layout_constraintBottom_toTopOf="@+id/ui1_skip"
        app:layout_constraintEnd_toEndOf="@+id/ui1_login_signup"
        app:layout_constraintTop_toBottomOf="@+id/ui1_login_signup">

    </ImageView>

    <TextView
        android:id="@+id/ui1_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_1"
        android:textColor="@color/heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ui1_login_signup">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui1_1"
        android:textColor="@color/black"
        android:id="@+id/ui1_forgot_password"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/ui1_password"
        app:layout_constraintTop_toBottomOf="@+id/ui1_password">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>