<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/shape_card_shaper"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:padding="1dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/icon_company"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_image_view_shaper"
        android:contentDescription="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/profile"
        android:textColor="@color/heading"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_time_message"
        android:id="@+id/notify_time"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/notify_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <ImageView
        android:id="@+id/notify_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_forward"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        android:contentDescription="@string/back_key">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>